--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Unit 6 Project Extensive Starter Code</title>
+        <title>Gym-Rat-Adevnture</title>
     </head>
     <body>
         <div class="title">[Gym Rat Adventure] </div>
